<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.13</version>
        <relativePath/>
    </parent>

    <groupId>com.wealthview</groupId>
    <artifactId>wealthview-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>WealthView Parent</name>

    <modules>
        <module>wealthview-persistence</module>
        <module>wealthview-core</module>
        <module>wealthview-api</module>
        <module>wealthview-import</module>
        <module>wealthview-projection</module>
        <module>wealthview-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <testcontainers.version>1.21.1</testcontainers.version>
        <jjwt.version>0.13.0</jjwt.version>
        <commons-csv.version>1.12.0</commons-csv.version>
        <ofx4j.version>1.7</ofx4j.version>
        <jsoup.version>1.21.2</jsoup.version>
        <spotbugs-maven-plugin.version>4.9.4.2</spotbugs-maven-plugin.version>
        <checkstyle-plugin.version>3.6.0</checkstyle-plugin.version>
        <jacoco-plugin.version>0.8.14</jacoco-plugin.version>
        <pmd-plugin.version>3.27.0</pmd-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.wealthview</groupId>
                <artifactId>wealthview-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wealthview</groupId>
                <artifactId>wealthview-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wealthview</groupId>
                <artifactId>wealthview-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wealthview</groupId>
                <artifactId>wealthview-import</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wealthview</groupId>
                <artifactId>wealthview-projection</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${commons-csv.version}</version>
            </dependency>
            <dependency>
                <groupId>com.webcohesion.ofx4j</groupId>
                <artifactId>ofx4j</artifactId>
                <version>${ofx4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.github.spotbugs</groupId>
                    <artifactId>spotbugs-maven-plugin</artifactId>
                    <version>${spotbugs-maven-plugin.version}</version>
                    <configuration>
                        <effort>Max</effort>
                        <threshold>Medium</threshold>
                        <failOnError>false</failOnError>
                        <excludeFilterFile>${maven.multiModuleProjectDirectory}/spotbugs-exclude.xml</excludeFilterFile>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${checkstyle-plugin.version}</version>
                    <configuration>
                        <configLocation>google_checks.xml</configLocation>
                        <consoleOutput>true</consoleOutput>
                        <failOnViolation>false</failOnViolation>
                        <violationSeverity>warning</violationSeverity>
                        <propertyExpansion>
                            org.checkstyle.google.checks.indentation.basicOffset=4
                            org.checkstyle.google.checks.indentation.braceAdjustment=0
                            org.checkstyle.google.checks.indentation.caseIndent=4
                            org.checkstyle.google.checks.indentation.throwsIndent=8
                            org.checkstyle.google.checks.indentation.arrayInitIndent=4
                            org.checkstyle.google.checks.indentation.lineWrappingIndentation=8
                        </propertyExpansion>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>${pmd-plugin.version}</version>
                    <configuration>
                        <targetJdk>21</targetJdk>
                        <failOnViolation>false</failOnViolation>
                        <printFailingErrors>true</printFailingErrors>
                        <linkXRef>false</linkXRef>
                        <rulesets>
                            <ruleset>pmd-ruleset.xml</ruleset>
                        </rulesets>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.pitest</groupId>
                    <artifactId>pitest-maven</artifactId>
                    <version>1.18.2</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.pitest</groupId>
                            <artifactId>pitest-junit5-plugin</artifactId>
                            <version>1.2.2</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <targetClasses>
                            <param>com.wealthview.core.projection.*</param>
                            <param>com.wealthview.core.projection.tax.*</param>
                            <param>com.wealthview.projection.*</param>
                        </targetClasses>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
